--- a/python/problem_006.ipynb
+++ b/python/problem_006.ipynb
@@ -12,40 +12,37 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f46b401c",
+   "id": "760563f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81c2912c",
+   "id": "0d151e26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sum_square_difference(n):\n",
-    "    sum_of_square = sum([i**2 for i in range(1, n+1)])\n",
-    "    square_of_sum = sum(range(1, n+1))**2\n",
-    "    return square_of_sum - sum_of_square"
+    "def sum_square_difference(n): return sum(range(1, n+1))**2 - sum([i**2 for i in range(1, n+1)])\n",
+    "\n",
+    "assert sum_square_difference(10) == 2640"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d585b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert sum_square_difference(n=10) == 2640"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d2ebc28",
+   "id": "1967759e",
    "metadata": {},
    "outputs": [
     {
@@ -54,32 +51,61 @@
        "25164150"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum_square_difference(n=100)"
+    "# answer\n",
+    "sum_square_difference(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "97e15d2b",
+   "execution_count": 4,
+   "id": "79d231b7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.84 μs ± 20.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.82 μs ± 41.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum_square_difference(n=100)\n",
-    "euler.save_benchmark(6, t)"
+    "# benchmark\n",
+    "%timeit sum_square_difference(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e260af",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bec863bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.83 μs ± 32.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o sum_square_difference(100)\n",
+    "import euler\n",
+    "euler.save_benchmark(6, bm)"
    ]
   }
  ],
@@ -99,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
