--- a/python/problem_007.ipynb
+++ b/python/problem_007.ipynb
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "46b306d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982690ae",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (sieve of eratosthenes)"
    ]
   },
   {
@@ -38,7 +54,9 @@
     "\t\t\tfor p in D[q]: # move each witness to its next multiple\n",
     "\t\t\t\tD.setdefault(p+q,[]).append(p)\n",
     "\t\t\tdel D[q]       # no longer need D[q], free memory\n",
-    "\t\tq += 1"
+    "\t\tq += 1\n",
+    "\n",
+    "assert next(eratosthenes()) == 2"
    ]
   },
   {
@@ -52,17 +70,31 @@
     "    primes = eratosthenes()\n",
     "    for i in range(n):\n",
     "        prime = next(primes)\n",
-    "    return prime"
+    "    return prime\n",
+    "\n",
+    "assert prime(6) == 13"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e8fa561",
+   "id": "12cdb474",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104743"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "assert prime(6) == 13"
+    "# answer\n",
+    "prime(10_001)"
    ]
   },
   {
@@ -72,23 +104,88 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "104743"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.9 ms ± 207 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "prime(10001)"
+    "# benchmark\n",
+    "%timeit prime(10_001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "621a97d8",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (sympy)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "368acef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "53866cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104743"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "sympy.prime(10_001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f8396fa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.43 ms ± 4.47 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sympy.prime(10_001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f486a09d",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0f883624",
    "metadata": {},
    "outputs": [
@@ -96,13 +193,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.3 ms ± 130 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "4.57 ms ± 168 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o prime(10001)\n",
-    "euler.save_benchmark(7, t)"
+    "bm = %timeit -o sympy.prime(10_001)\n",
+    "import euler\n",
+    "euler.save_benchmark(7, bm)"
    ]
   },
   {
@@ -131,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
