--- a/julia/problem_007.ipynb
+++ b/julia/problem_007.ipynb
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  11.007 ms (270363 allocations: 13.34 MiB)\n"
+      "  11.036 ms (270363 allocations: 13.34 MiB)\n"
      ]
     },
     {
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.741 ms (0 allocations: 0 bytes)\n"
+      "  2.740 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "bm = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0)\n",
+    "bm = @benchmark Primes.prime(10_001)\n",
     "euler.save_benchmark(7, bm);"
    ]
   },
