--- a/julia/problem_008.ipynb
+++ b/julia/problem_008.ipynb
@@ -5,29 +5,46 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 8\n",
+    "# Problem 8\n",
     "https://projecteuler.net/problem=8"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "abccc5dd",
+   "id": "55b83b0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "abccc5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "06633235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "digit_series = digits(parse(BigInt, read(\"../data/0008_series.txt\", String)));"
+    "series = read(\"../data/0008_series.txt\", String);"
    ]
   },
   {
@@ -35,27 +52,18 @@
    "id": "91800791",
    "metadata": {},
    "source": [
-    "#### Solution 1 (function)"
+    "### Solution 1 (prod)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "62dc1b45",
+   "execution_count": 4,
+   "id": "e3b964b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "largest_product (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function largest_product(digit_series::Vector{Int64}, n::Int64)::Int64\n",
+    "function largest_prod(series::String, n::Int64)::Int64\n",
+    "    digit_series = [parse(Int64, c) for c in series]\n",
     "    largest = 0\n",
     "    for i in 1:length(digit_series)-n+1\n",
     "        x = prod(digit_series[i:i+n-1])\n",
@@ -64,82 +72,24 @@
     "        end\n",
     "    end\n",
     "    return largest\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fa2370ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23514624000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "largest_product(digit_series, 13)"
+    "end\n",
+    "\n",
+    "@assert largest_prod(series, 4) == 5832"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9067a4f",
+   "id": "f143d035",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m19.292 μs\u001b[22m\u001b[39m … \u001b[35m 2.707 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 98.37%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m21.042 μs              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m25.998 μs\u001b[22m\u001b[39m ± \u001b[32m65.516 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m16.55% ±  7.17%\n",
-       "\n",
-       "  \u001b[39m▁\u001b[39m▂\u001b[39m▃\u001b[39m▅\u001b[39m▇\u001b[39m█\u001b[34m▇\u001b[39m\u001b[39m▆\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m \u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▁\u001b[39m▄\u001b[39m \u001b[39m█\n",
-       "  19.3 μs\u001b[90m      \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      37.8 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m154.38 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m1976\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark largest_product(digit_series, 13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "edbe0d67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(8, b);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b168ef10",
-   "metadata": {},
-   "source": [
-    "#### Solution 2 (oneliner)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bc105826",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  23.458 μs (1979 allocations: 162.31 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -151,28 +101,56 @@
     }
    ],
    "source": [
-    "maximum(prod(digit_series[i:i+13-1]) for i in 1:length(digit_series)-13+1)"
+    "@btime largest_prod(series, 13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb0880e",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (reduce)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2edeeac7",
+   "execution_count": 6,
+   "id": "f5a18499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function largest_reduce(series::String, n::Int64)::Int64\n",
+    "    digit_series = [parse(Int64, c) for c in series]\n",
+    "    largest = 0\n",
+    "    for i in 1:length(digit_series)-n+1\n",
+    "        x = reduce(*, digit_series[i:i+n-1])\n",
+    "        if x > largest\n",
+    "            largest = x\n",
+    "        end\n",
+    "    end\n",
+    "    return largest\n",
+    "end\n",
+    "\n",
+    "@assert largest_reduce(series, 4) == 5832"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "395b19ec",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  24.208 μs (1979 allocations: 162.31 KiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m75.666 μs\u001b[22m\u001b[39m … \u001b[35m  4.814 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 97.90%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m77.750 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m88.067 μs\u001b[22m\u001b[39m ± \u001b[32m116.168 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m9.64% ±  8.01%\n",
-       "\n",
-       "  \u001b[39m▂\u001b[39m▆\u001b[39m█\u001b[34m▆\u001b[39m\u001b[39m▃\u001b[39m▃\u001b[39m▅\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▅\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▆\u001b[39m▁\u001b[39m▆\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▃\u001b[39m▄\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▃\u001b[39m \u001b[39m█\n",
-       "  75.7 μs\u001b[90m       \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m       119 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m204.38 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m4186\u001b[39m."
+       "23514624000"
       ]
      },
      "metadata": {},
@@ -180,23 +158,68 @@
     }
    ],
    "source": [
-    "b = @benchmark maximum(prod(digit_series[i:i+13-1]) for i in 1:length(digit_series)-13+1)"
+    "@btime largest_reduce(series, 13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135b9cd2",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (onliner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2403ae40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4.098 ms (8171 allocations: 7.87 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "23514624000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime maximum(prod([parse(Int64, c) for c in series][i:i+13-1]) for i in 1:length(series)-13+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e69e83",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3bfb4c70",
+   "id": "40c77eb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(8, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark largest_reduce(series, 13)\n",
+    "euler.save_benchmark(8, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -204,7 +227,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
