--- a/python/problem_009.ipynb
+++ b/python/problem_009.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 9\n",
+    "##Problem 9\n",
     "https://projecteuler.net/problem=9"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "91ad7a42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe7fddbd",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (brute force)"
    ]
   },
   {
@@ -26,10 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triplet_product(n):\n",
-    "    for a in range(n):\n",
-    "        for b in range(n):\n",
-    "            for c in range(n):\n",
+    "def triplet_product():\n",
+    "    for c in range(1000):\n",
+    "        for b in range(1000):\n",
+    "            for a in range(1000):\n",
     "                if (a < b < c) and (a**2 + b**2 == c**2) and (a + b + c == 1000):\n",
     "                    return a * b * c\n"
    ]
@@ -52,12 +68,116 @@
     }
    ],
    "source": [
-    "triplet_product(1000)"
+    "# answer\n",
+    "triplet_product()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "3dab9b64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.6 s ± 100 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit triplet_product()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d761f594",
+   "metadata": {},
+   "source": [
+    "### Solution 2 minimize loops)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29082456",
+   "metadata": {},
+   "source": [
+    "$$ a < b < c $$\n",
+    "$$ c > b > a $$\n",
+    "$$ c + b + a = 1000 $$\n",
+    "$$ \\text{Therefore } b \\text{ cannot be greater than 499} $$\n",
+    "$$ a = 1000 - b - c$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2dfd6fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triplet_product():\n",
+    "    for c in range(1000):\n",
+    "        for b in range(500):\n",
+    "            a = 1000 - b - c\n",
+    "            if (a < b < c) and (a**2 + b**2 == c**2) and (a + b + c == 1000):\n",
+    "                return a * b * c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bd2be809",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31875000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "triplet_product()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9b14e27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.27 ms ± 343 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit triplet_product()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36f231fb",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "35801c60",
    "metadata": {},
    "outputs": [
@@ -65,13 +185,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.51 s ± 30.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "7.22 ms ± 94.9 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o triplet_product(1000)\n",
-    "euler.save_benchmark(9, t)"
+    "bm = %timeit -o triplet_product()\n",
+    "import euler\n",
+    "euler.save_benchmark(9, bm)"
    ]
   }
  ],
@@ -91,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
