--- a/julia/problem_010.ipynb
+++ b/julia/problem_010.ipynb
@@ -12,20 +12,62 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cd67453",
+   "id": "4476c49d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "8cd67453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e058a1",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (primes package)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "00770042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "41426564",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.119 ms (7 allocations: 1.65 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -37,28 +79,67 @@
     }
    ],
    "source": [
-    "sum(primes(2_000_000))"
+    "@btime sum(Primes.primes(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7aae58f",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (sieve)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "109b26f6",
+   "execution_count": 5,
+   "id": "7c8ce172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function eratosthenes(n::Int64)::Vector{Int64}\n",
+    "    \n",
+    "    D = Dict{Int64, Vector{Int64}}()\n",
+    "    P = Vector{Int64}()\n",
+    "    q = 2\n",
+    "    counter = 0\n",
+    "\n",
+    "    while counter < n\n",
+    "        if !(q in keys(D))\n",
+    "            D[q * q] = Int64[q] # Vector{Int64}([q])\n",
+    "            push!(P, q)\n",
+    "            counter += 1\n",
+    "        else\n",
+    "            for p in D[q]\n",
+    "                haskey(D, p+q) ? push!(D[p+q], p) : D[p+q] = [p]\n",
+    "            end\n",
+    "            delete!(D, q)\n",
+    "        end\n",
+    "        q += 1\n",
+    "    end\n",
+    "    return P\n",
+    "end\n",
+    "\n",
+    "@assert last(eratosthenes(6)) == 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc009e2f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  293.178 ms (5344585 allocations: 273.95 MiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 2191 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m2.118 ms\u001b[22m\u001b[39m … \u001b[35m  4.841 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 52.52%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m2.217 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m2.275 ms\u001b[22m\u001b[39m ± \u001b[32m177.498 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m2.90% ±  5.41%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m▂\u001b[39m▃\u001b[39m \u001b[39m \u001b[39m▁\u001b[39m▃\u001b[39m█\u001b[39m█\u001b[34m▅\u001b[39m\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▅\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▇\u001b[39m▄\u001b[39m▅\u001b[32m▃\u001b[39m\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m▃\n",
-       "  2.12 ms\u001b[90m         Histogram: frequency by time\u001b[39m        2.79 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.65 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m7\u001b[39m."
+       "142913828922"
       ]
      },
      "metadata": {},
@@ -66,23 +147,33 @@
     }
    ],
    "source": [
-    "b = @benchmark sum(primes(2_000_000))"
+    "@btime sum(filter(x -> x < 2_000_000, eratosthenes(150_000)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "995c3063",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "742199da",
+   "execution_count": 7,
+   "id": "732154dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(10, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark sum(Primes.primes(2_000_000))\n",
+    "euler.save_benchmark(10, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -90,7 +181,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
