--- a/python/problem_010.ipynb
+++ b/python/problem_010.ipynb
@@ -12,16 +12,150 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f43d1548",
+   "id": "7071e49a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287a3d5a",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (prime range)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ce220220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "464c26e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "sum(sympy.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0eb6eed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "941 ms ± 21.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum(sympy.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "affb6b04",
+   "metadata": {},
+   "source": [
+    "### Slution 2 (sieve prime range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5f0c8734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d64f32dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "sum(sympy.sieve.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "910cab9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.41 ms ± 58.1 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum(sympy.sieve.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73a0844",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (sieve of eratosthenes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -38,12 +172,14 @@
     "\t\t\tfor p in D[q]: # move each witness to its next multiple\n",
     "\t\t\t\tD.setdefault(p+q,[]).append(p)\n",
     "\t\t\tdel D[q]       # no longer need D[q], free memory\n",
-    "\t\tq += 1"
+    "\t\tq += 1\n",
+    "\n",
+    "assert next(eratosthenes()) == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -58,22 +194,14 @@
     "            summation += prime\n",
     "        else:\n",
     "            break\n",
-    "    return summation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8e8fa561",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return summation\n",
+    "\n",
     "assert summation_of_primes(10) == 17"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -83,18 +211,46 @@
        "142913828922"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "summation_of_primes(2_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "id": "5b472287",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "532 ms ± 16 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit summation_of_primes(2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "009b9198",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d3850ce8",
    "metadata": {},
    "outputs": [
@@ -102,13 +258,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "536 ms ± 9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.45 ms ± 49.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o summation_of_primes(2_000_000)\n",
-    "euler.save_benchmark(10, t)"
+    "bm = %timeit -o sum(sympy.sieve.primerange(2_000_000))\n",
+    "import euler\n",
+    "euler.save_benchmark(10, bm)"
    ]
   },
   {
@@ -137,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
